# intent-classifier

./: .gitignore  .python-version  infer.sh  pyproject.toml  test.py  train.sh
src/: __init__.py  inference.py  prepare_data.py  train.py  utils.py
