[project]
name = "intent-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.10.0",
    "numpy==2.1.3",
    "pandas==2.3.3",
    "python-dotenv>=1.2.1",
    "pyyaml==6.0.3",
    "rich==14.2.0",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "tqdm==4.67.1",
    "transformers==4.57.3",
]
